# Conformal-Predictive-Decision-Making

./: .gitignore  BDT.py  CPDM.py  LICENSE  README.md  data_generation.py  formatting.py  main.ipynb  main.py  model_selection.py  predictive_decision_making.py  pyproject.toml  requirements.txt
configs/10_inductive_skewed/: f1_inductive_skewed.py  f2_inductive_skewed.py  f3_inductive_skewed.py  linear_inductive_skewed.py
configs/11_inductive_skewed_noise/: f3_inductive_skewed_noise.py  linear_inductive_skewed_noise.py
configs/12_online_data/: f1_online_data.py  f2_online_data.py  f3_online_data.py  linear_online_data.py
configs/13_online_noise_data/: f1_online_noise_data.py  f2_online_noise_data.py  f3_online_noise_data.py  linear_online_noise_data.py
configs/14_online_skewed_data/: f1_online_skewed_data.py  f2_online_skewed_data.py  f3_online_skewed_data.py  linear_online_skewed_data.py
configs/15_online_noise_skewed_data/: f1_online_noise_skewed_data.py  f2_online_noise_skewed_data.py  f3_online_noise_skewed_data.py  linear_online_noise_skewed_data.py
configs/16_inductive_data/: f1_inductive_data.py  f2_inductive_data.py  f3_inductive_data.py  linear_inductive_data.py
functions/: CPDM.py  data_generation.py
notebooks/: Better_predicitve_linear.ipynb  Experiment_template.ipynb  Experiment_template_inductive.ipynb  Experiment_template_online.ipynb  Experimentation.ipynb  Johan-fix.ipynb  cover.ipynb  debug.ipynb  new.ipynb  plot_cpds.ipynb  standard_normal.ipynb  why v1 is bad.ipynb
src/: graphs.py  main.py  run_experiments.py
src/functions/: BDT.py  (+6 more)
(+131 files in other folders)
