[project]
name = "conformal-predictive-decision-making"
version = "0.1.0"
description = "A complete experimental setup for comparison of bayesian decision theory and conformal predictive decision making."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crepes>=0.7.1",
    "importlib>=1.0.4",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "online-cp>=0.0.9",
    "pandas>=2.2.3",
    "ruff>=0.11.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
